continue crossword bugs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Burmese Crossword</title>
+    <link rel="stylesheet" type="text/css" href="styles/myanmar.css"/>
     <link rel="stylesheet" type="text/css" href="styles/crossword.css"/>
   </head>
   <body>
@@ -15,13 +16,13 @@
     <div id="clues">
       <div id="across">
         <h4>Across</h4>
-        <ul>
-        </ul>
+        <div class="list">
+        </div>
       </div>
       <div id="down">
         <h4>Down</h4>
-        <ul>
-        </ul>
+        <div class="list">
+        </div>
       </div>
     </div>
     <div class="clearfix">
