--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <canvas id="puzzle" width="600" height="600">
     </canvas>
     <script type="text/javascript" src="scripts/lib/myanmar.numbers.js"></script>
+    <script type="text/javascript" src="scripts/lib/rabbit.js"></script>
     <script type="text/javascript" src="scripts/lib/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="scripts/crossword.js"></script>
   </body>
