reorganized for cli, node module, and browser libraries to share code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Burmese Crossword</title>
-    <link rel="stylesheet" type="text/css" href="styles/myanmar.css"/>
+    <link rel="stylesheet" type="text/css" href="languages/myanmar.css"/>
     <link rel="stylesheet" type="text/css" href="styles/crossword.css"/>
   </head>
   <body>
@@ -47,6 +47,8 @@
     <script type="text/javascript" src="scripts/lib/myanmar.numbers.js"></script>
     <script type="text/javascript" src="scripts/lib/rabbit.js"></script>
     <script type="text/javascript" src="scripts/lib/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="scripts/crossword.js"></script>
+    <script type="text/javascript" src="languages/myanmar.js"></script>
+    <script type="text/javascript" src="crossword-common.js"></script>
+    <script type="text/javascript" src="scripts/crossword-browser.js"></script>
   </body>
 </html>
