--- a/tamil.html
+++ b/tamil.html
@@ -34,6 +34,7 @@
     <canvas id="puzzle" width="600" height="600">
     </canvas>
     <script type="text/javascript" src="scripts/lib/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="scripts/crossword-tamil.js"></script>
-  </body>
+    <script type="text/javascript" src="languages/tamil.js"></script>
+    <script type="text/javascript" src="crossword-common.js"></script>
+    <script type="text/javascript" src="scripts/crossword-browser.js"></script>  </body>
 </html>
