--- a/nepali.html
+++ b/nepali.html
@@ -46,6 +46,8 @@
     </canvas>
     <script type="text/javascript" src="scripts/lib/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="scripts/lib/preeti.js"></script>
-    <script type="text/javascript" src="scripts/crossword-nepali.js"></script>
+    <script type="text/javascript" src="languages/nepali.js"></script>
+    <script type="text/javascript" src="crossword-common.js"></script>
+    <script type="text/javascript" src="scripts/crossword-browser.js"></script>
   </body>
 </html>
